2008-01-24 Raphael Ackermann <raphael.ackermann@gmail.com>
	Removed all the __author__, __revision__ and __version__ statements

2008-01-24 Raphael Ackermann <raphael.ackermann@gmail.com>
	* src/PageView.py: import sgettext instead of gettext
	* src/DataViews.py: rename Family List View to Families View

2008-01-24 Peter landgren <peter.talken@telia.com>
    * src/plugin/rel_sv.py: Works also for kinship report now.

2008-01-24 Brian Matherly <brian@gramps-project.org>
	* src/ReportBase/_CommandLineReport.py:
	* src/ReportBase/_ReportOptions.py:
	* src/plugins/DescendReport.py:
	* src/plugins/DetDescendantReport.py:
	* src/plugins/KinshipReport.py:
	* src/plugins/IndivComplete.py:
	* src/plugins/CalculateEstimatedDates.py:
	* src/plugins/BookReport.py:
	* src/plugins/TimeLine.py:
	* src/plugins/Calendar.py:
	* src/plugins/GVFamilyLines.py:
	* src/plugins/AncestorReport.py:
	* src/plugins/MarkerReport.py:
	* src/plugins/DescendChart.py:
	* src/plugins/EndOfLineReport.py:
	* src/plugins/AncestorChart.py:
	* src/plugins/DetAncestralReport.py:
	* src/plugins/CustomBookText.py:
	* src/plugins/FamilyGroup.py:
	* src/plugins/GVRelGraph.py:
	* src/plugins/GVHourGlass.py:
	* src/plugins/StatisticsChart.py:
	* src/plugins/FanChart.py:
	* src/PluginUtils/_GuiOptions.py:
	Refactoring the report system: reports no longer require dbstate.

2008-01-23 Gary Burton <gary.burton@zen.co.uk>
	* src/plugins/GVFamilyLines.py: Use fallback events e.g. baptism/burial
	when no birth or death events are available.

2008-01-23 Gary Burton <gary.burton@zen.co.uk>
	* src/DisplayState.py: Display the Recent Databases menu only if there
	are some recently opened databases.

2008-01-23 Benny Malengier <benny.malengier@gramps-project.org>
	* src/Editors/_EditPerson.py: remove hide in save method.

2008-01-23 Brian Matherly <brian@gramps-project.org>
	* src/ReportBase/_StyleComboBox.py:
	* src/ReportBase/_StyleEditor.py:
	Modify the style editor to properly handle unicode style names.
