@@ -1,3 +1,9 @@
+2008-01-24  Douglas S. Blank  <dblank@cs.brynmawr.edu>
+	* src/GrampsCfg.py: missing const; added Text tab
+	* src/Config/_GrampsConfigKeys.py: added missing and private text
+	* src/plugins/DefaultGramplets.py: use missing surname text
+	* src/Simple/_SimpleAccess.py: use missing surname text
+
 2008-01-24 Raphael Ackermann <raphael.ackermann@gmail.com>
 	Removed all the __author__, __revision__ and __version__ statements
 
